--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,12 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   curved_labeled_navigation_bar: ^2.0.6
+  date_format: ^2.0.9
   flutter:
     sdk: flutter
   fluttertoast: ^9.0.0
+  format: ^1.6.0
+  intl: ^0.20.2
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
 
