--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   format: ^1.6.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  simple_vcard_parser: ^0.2.0
   sqflite: ^2.4.2
 
 dev_dependencies:
