--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,25 @@ dependencies:
   date_format: ^2.0.9
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
   fluttertoast: ^9.0.0
   format: ^1.6.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   simple_vcard_parser: ^0.2.0
   sqflite: ^2.4.2
+  uuid: ^4.0.0 # Pastikan versi terbaru (atau yang Anda gunakan) ada di sini
 
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21fflutter
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
