--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   fluttertoast: ^9.0.0
   format: ^1.6.0
+  http: ^1.6.0
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   simple_vcard_parser: ^0.2.0
   sqflite: ^2.4.2
-  uuid: ^4.0.0 # Pastikan versi terbaru (atau yang Anda gunakan) ada di sini
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
