--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   date_format: ^2.0.9
   firebase_auth: ^6.1.2
   firebase_core: ^4.2.1
+  firebase_storage: ^13.0.4
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   fluttertoast: ^9.0.0
   format: ^1.6.0
   http: ^1.6.0
+  image_picker: ^1.2.1
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   simple_vcard_parser: ^0.2.0
