--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   fluttertoast: ^9.0.0
-  format: ^1.6.0
+  # format: ^1.6.0
   http: ^1.6.0
   image_picker: ^1.2.1
   intl: ^0.20.2
+  path: ^1.9.1
+  path_provider: ^2.1.5
   shared_preferences: ^2.5.3
-  simple_vcard_parser: ^0.2.0
+  # simple_vcard_parser: ^0.2.0
   sqflite: ^2.4.2
   uuid: ^4.0.0
 
